--- a/src/SketchpadAssignment/canvas.fxml
+++ b/src/SketchpadAssignment/canvas.fxml
@@ -28,19 +28,14 @@
             </MenuBar>
             <ToolBar>
                 <HBox alignment="CENTER" spacing="5">
-                    <Slider fx:id="brushSize" majorTickUnit="1.0" max="90" min="1" minorTickCount="0"
-                            snapToTicks="true" value="16.0" />
+                    <Slider fx:id="brushSize" majorTickUnit="1.0" max="90" min="1" minorTickCount="0" snapToTicks="true" value="16.0" />
                     <TextField fx:id="brushSizeText" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="30.0" text="16" />
                     <Label text="Stroke:">
                        <HBox.margin>
                           <Insets left="10.0" />
                        </HBox.margin>
                     </Label>
-                    <ColorPicker fx:id="cpLine" prefHeight="25.0" prefWidth="90.0">
-                        <HBox.margin>
-                            <Insets right="15.0" />
-                        </HBox.margin>
-                    </ColorPicker>
+                    <ColorPicker fx:id="cpLine" prefHeight="25.0" prefWidth="90.0" />
                     <Label text="Fill:">
                        <HBox.margin>
                           <Insets left="10.0" />
@@ -56,7 +51,7 @@
                           <ToggleGroup fx:id="tools" />
                        </toggleGroup>
                     </ToggleButton>
-                    <ToggleButton fx:id="brush" toggleGroup="$tools" selected="true">
+                    <ToggleButton fx:id="brush" selected="true" toggleGroup="$tools">
                     </ToggleButton>
                     <ToggleButton fx:id="line" toggleGroup="$tools">
                     </ToggleButton>
@@ -67,6 +62,10 @@
                     <ToggleButton fx:id="ellipse" toggleGroup="$tools">
                     </ToggleButton>
                     <ToggleButton fx:id="circle" toggleGroup="$tools">
+                    </ToggleButton>
+                    <ToggleButton fx:id="openPolygon" toggleGroup="$tools">
+                    </ToggleButton>
+                    <ToggleButton fx:id="closedPolygon" toggleGroup="$tools">
                     </ToggleButton>
                     <ToggleButton fx:id="eraser" toggleGroup="$tools">
                     </ToggleButton>
