--- a/src/SketchpadAssignment/canvas.fxml
+++ b/src/SketchpadAssignment/canvas.fxml
@@ -16,20 +16,22 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.Button?>
 <BorderPane prefHeight="650.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SketchpadAssignment.CanvasController">
 
     <top>
         <VBox>
             <MenuBar>
                 <Menu text="File">
+               <MenuItem onAction="#onOpen" text="Open" />
                     <MenuItem onAction="#onSave" text="Save" />
                     <MenuItem onAction="#onExit" text="Exit" />
                 </Menu>
             </MenuBar>
             <ToolBar>
                 <HBox alignment="CENTER" spacing="5">
-                    <Slider fx:id="brushSize" majorTickUnit="1.0" max="90" min="1" minorTickCount="0" snapToTicks="true" value="16.0" />
-                    <TextField fx:id="brushSizeText" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="30.0" text="16" />
+                    <Slider fx:id="brushSize" majorTickUnit="1.0" max="90" min="1" minorTickCount="0" snapToTicks="true" value="1.0" />
+                    <TextField fx:id="brushSizeText" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="30.0" text="1" />
                     <Label text="Stroke:">
                        <HBox.margin>
                           <Insets left="10.0" />
@@ -67,8 +69,8 @@
                     </ToggleButton>
                     <ToggleButton fx:id="closedPolygon" toggleGroup="$tools">
                     </ToggleButton>
-                    <ToggleButton fx:id="eraser" toggleGroup="$tools">
-                    </ToggleButton>
+                    <Button fx:id="eraser" onAction="#erase">
+                    </Button>
                 </HBox>
             </ToolBar>
         </VBox>
